# music-notes

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
src/notes/: __main__.py  constants.py  notes.py  tkinter.py  utils.py
utils/: midi.py  piano.py
